--- a/Video/CreateModel.ipynb
+++ b/Video/CreateModel.ipynb
@@ -184,9 +184,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "## test if the folder a"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -205,7 +203,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5238573367df39f7286bb46f9ff5f08f63a01a80960060ce41e3c79b190280fa"
+   }
   }
  },
  "nbformat": 4,
