assert training batch and delete corrupted images

--- a/Video/CreateModel.ipynb
+++ b/Video/CreateModel.ipynb
@@ -85,8 +85,8 @@
     "import os\n",
     "\n",
     "num_skipped = 0\n",
-    "for folder_name in (\"Cat\", \"Dog\"):\n",
-    "    folder_path = os.path.join(\"A\", folder_name)\n",
+    "for folder_name in ('A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z',\"Space\"):\n",
+    "    folder_path = os.path.join(\"train\", folder_name)\n",
     "    for fname in os.listdir(folder_path):\n",
     "        fpath = os.path.join(folder_path, fname)\n",
     "        try:\n",
@@ -177,7 +177,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "assert train_batches.n != 0"
+   ]
   },
   {
    "cell_type": "code",
